exports[`VerticalListMenu [common] example testing should match snapshot for 1.basic 1`] = `
<VerticalListMenu
  style={
    Object {
      "width": 250,
    }
  }>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
</VerticalListMenu>
`;

exports[`VerticalListMenu [common] example testing should match snapshot for 2.nested-with-expander 1`] = `
<VerticalListMenu
  onSelect={[Function]}
  selectedIndices={
    Array [
      0,
    ]
  }
  style={
    Object {
      "width": 250,
    }
  }>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item
    hasExpander={true}>
    Level one with VerticalListMenu
    <VerticalListMenu
      onSelect={[Function]}
      selectedIndices={Array []}>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item
        hasExpander={true}>
        Level two with VerticalListMenu and lots of text. Lorem quos natus mollitia nihil quasi! Necessitatibus corporis aliquam quam laborum nesciunt quaerat. Nostrum distinctio officiis adipisci nulla unde repellat. Soluta eaque ex obcaecati molestiae provident aspernatur sit! Expedita et.
        <VerticalListMenu
          onSelect={[Function]}
          selectedIndices={Array []}>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
        </VerticalListMenu>
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
    </VerticalListMenu>
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
</VerticalListMenu>
`;

exports[`VerticalListMenu [common] example testing should match snapshot for 3.nested-full-width 1`] = `
<VerticalListMenu
  onSelect={[Function]}
  selectedIndices={
    Array [
      0,
    ]
  }>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
  <VerticalListMenu.Item
    isExpanded={true}>
    Level one with VerticalListMenu
    <VerticalListMenu
      onSelect={[Function]}
      selectedIndices={Array []}>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
    </VerticalListMenu>
  </VerticalListMenu.Item>
  <VerticalListMenu.Item
    isExpanded={true}>
    Level one with VerticalListMenu
    <VerticalListMenu
      onSelect={[Function]}
      selectedIndices={Array []}>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
      <VerticalListMenu.Item
        isExpanded={false}>
        Level two with closed VerticalListMenu
        <VerticalListMenu
          onSelect={[Function]}
          selectedIndices={Array []}>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
          <VerticalListMenu.Item>
            Level three
          </VerticalListMenu.Item>
        </VerticalListMenu>
      </VerticalListMenu.Item>
      <VerticalListMenu.Item>
        Level two
      </VerticalListMenu.Item>
    </VerticalListMenu>
  </VerticalListMenu.Item>
  <VerticalListMenu.Item>
    Level one
  </VerticalListMenu.Item>
</VerticalListMenu>
`;
